--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "challenge-final",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "8.5.0",
+    "node": "16.14.2"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
