--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-feather": "^2.0.10",
     "react-google-button": "^0.7.2",
     "react-redux": "^8.0.2",
+    "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "swiper": "^8.2.2",
