--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.1.0",
     "react-feather": "^2.0.10",
     "react-google-button": "^0.7.2",
+    "react-hook-form": "^7.32.1",
     "react-redux": "^8.0.2",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-dom": "^6.3.0",
